data/derived/comb/progs/unify/prog5729.ml.out
Characters 80-85:
  | Sine(e1) -> "sin" + exprToSring (e1)
                ^^^^^
Error: This expression has type string but an expression was expected of type
         int
